--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "devDependencies": {
         "@babel/core": "^7.22.20",
         "@babel/preset-env": "^7.22.20",
-        "@types/jest": "^29.5.5",
-        "@types/node": "^20.6.0",
+        "@types/jest": "^29.5.14",
+        "@types/node": "^20.17.28",
         "@types/readline-sync": "^1.4.4",
         "@types/yargs": "^17.0.24",
         "babel-jest": "^29.7.0",
-        "jest": "^29.0.0",
+        "jest": "^29.7.0",
         "ts-jest": "^29.1.1",
         "ts-standard": "^10.0.0",
         "typescript": "^4.9.5"
@@ -30,5 +30,21 @@
     },
     "directories": {
         "test": "tests"
+    },
+    "tsconfig": {
+        "compilerOptions": {
+            "outDir": "./dist",
+            "rootDir": "./src"
+        },
+        "include": [
+            "src/**/*.ts"
+        ],
+        "exclude": [
+            "node_modules"
+        ]
+    },
+    "jest": {
+        "preset": "ts-jest",
+        "testEnvironment": "node"
     }
 }
